feat(combat): scale mobs to player level and equipped gear